--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#avl">
                 <li class="itn-menu">Avaliações</li>
             </a>
-            <a href="file:///C:/Users/Aluno/Documents/GitHub/starlist/login.html" id="login-btn">
+            <a href="starlist/login.html" id="login-btn">
                 <li class="itn-menu">Login</li>
             </a>
             <a href="file:///C:/Users/Aluno/Documents/GitHub/starlist/cadastro.html" id="cadastro-btn">
