--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <a href="#avl">
                 <li class="itn-menu">Avaliações</li>
             </a>
-            <a href="C:/Users/Aluno/Documents/GitHub/starlist/login.html" id="login-btn">
+            <a href="login.html" id="login-btn">
                 <li class="itn-menu">Login</li>
             </a>
-            <a href="file:///C:/Users/Aluno/Documents/GitHub/starlist/cadastro.html" id="cadastro-btn">
+            <a href="cadastro.html" id="cadastro-btn">
                 <li class="itn-menu1">Cadastre-se</li>
             </a>
         </ul>
