--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <!--Inícia Aba: Sobre-nós-->
     <section id="sobre">
-        <h1 id="sobre-txt">O Starefinha é uma lista de tarefas práticas que te ajuda <br>no seu planejamento,
+        <h1 id="sobre-txt">O Starlist é uma lista de tarefas práticas que te ajuda <br>no seu planejamento,
             organização e gerenciamento das suas ideias<br>
             que tem como principal foco te ajudar a aproveitar melhor<br> seu tempo. Venha fazer parte de nossa
             constelação.</h1>
