--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/bootstrap.js"></script>
     <link rel="shortcut icon" href="images/logoestrela.png" type="image/x-icon">
     <title>Starlist</title>
 </head>
@@ -18,7 +20,7 @@
         </div>
 
         <!--Itens do Menu-->
-        <ul class="menu">
+        <ul class="menu list-inline list-inline-item">
             <a href="#sobre">
                 <li class="itn-menu">Sobre</li>
             </a>
@@ -50,31 +52,47 @@
     </main>
 
     <!--Início Aba: Conhecer-->
-    <section id="conhecer">
-        <h1>Conheça-nos</h1>
-        <div class="conhecer-grid">
-            <div class="conhecer-cards">
-                <h2>Suporte</h2>
-                <p class="explicação">Ajuda e suporte 24h para auxiliar <br> nas suas dúvidas e problemas</p>
-                <img class="img-conhecer" src="images/Suporte.png" alt="">
-            </div>
-
-            <div class="conhecer-cards">
-                <h2>Utilidades</h2>
-                <p class="explicação">Te ajuda no planejamento, <br>organização e gerenciamento das <br>suas ideias com
-                    o principal foco <br> em te ajudar a aproveitar <br> melhor seu tempo. </p>
-                <img class="img-conhecer" src="images/Utilidade.png" alt="">
-            </div>
-
-            <div class="conhecer-cards">
-                <h2>Segurança</h2>
-                <p class="explicação">Seus planejamentos e dados <br>protegidos com total segurança</p>
-                <img class="img-conhecer" src="images/seguranca.jpeg" alt="">
-            </div>
-
-
+    <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+        <div class="card-header">Cabeçalho</div>
+        <div class="card-body">
+            <h5 class="card-title">Título de Card Primary</h5>
+            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
+                do card.</p>
         </div>
-    </section>
+    </div>
+    <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+        <div class="card-header">Cabeçalho</div>
+        <div class="card-body">
+            <h5 class="card-title">Título de Card Secondary</h5>
+            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
+                do card.</p>
+        </div>
+    </div>
+    <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
+        <div class="card-header">Cabeçalho</div>
+        <div class="card-body">
+            <h5 class="card-title">Título de Card Success</h5>
+            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
+                do card.</p>
+        </div>
+    </div>
+    <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
+        <div class="card-header">Cabeçalho</div>
+        <div class="card-body">
+            <h5 class="card-title">Título de Card Danger</h5>
+            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
+                do card.</p>
+        </div>
+    </div>
+    <div class="card text-white bg-warning mb-3" style="max-width: 18rem;">
+        <div class="card-header">Cabeçalho</div>
+        <div class="card-body">
+            <h5 class="card-title">Título de Card Warning</h5>
+            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
+                do card.</p>
+        </div>
+    </div>
+    </div>
     <!--Fim Aba: Conhecer-->
 
     <!--Inícia Aba: Sobre-nós-->
@@ -221,7 +239,7 @@
             <div class="contato">
                 <h3>Contato</h3>
 
-                <div class="rodape-2">
+                <div class="rodape-contatos">
                     <a href="https://www.whatsapp.com/?lang=pt_br" target="_blank">
                         <img src="images/whatsapp.png" alt="whatsapp">
                     </a>
