final para apresentação

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <script src="js/bootstrap.js"></script>
     <link rel="shortcut icon" href="images/logoestrela.png" type="image/x-icon">
     <title>Starlist</title>
 </head>
@@ -20,7 +18,7 @@
         </div>
 
         <!--Itens do Menu-->
-        <ul class="menu list-inline list-inline-item">
+        <ul class="menu">
             <a href="#sobre">
                 <li class="itn-menu">Sobre</li>
             </a>
@@ -52,47 +50,31 @@
     </main>
 
     <!--Início Aba: Conhecer-->
-    <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-        <div class="card-header">Cabeçalho</div>
-        <div class="card-body">
-            <h5 class="card-title">Título de Card Primary</h5>
-            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
-                do card.</p>
+    <section id="conhecer">
+        <h1>Conheça-nos</h1>
+        <div class="conhecer-grid">
+            <div class="conhecer-cards">
+                <h2>Suporte</h2>
+                <p class="explicação">Ajuda e suporte 24h para auxiliar <br> nas suas dúvidas e problemas</p>
+                <img class="img-conhecer" src="images/Suporte.png" alt="">
+            </div>
+
+            <div class="conhecer-cards">
+                <h2>Utilidades</h2>
+                <p class="explicação">Te ajuda no planejamento, <br>organização e gerenciamento das <br>suas ideias com
+                    o principal foco <br> em te ajudar a aproveitar <br> melhor seu tempo. </p>
+                <img class="img-conhecer" src="images/Utilidade.png" alt="">
+            </div>
+
+            <div class="conhecer-cards">
+                <h2>Segurança</h2>
+                <p class="explicação">Seus planejamentos e dados <br>protegidos com total segurança</p>
+                <img class="img-conhecer" src="images/seguranca.jpeg" alt="">
+            </div>
+
+
         </div>
-    </div>
-    <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-        <div class="card-header">Cabeçalho</div>
-        <div class="card-body">
-            <h5 class="card-title">Título de Card Secondary</h5>
-            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
-                do card.</p>
-        </div>
-    </div>
-    <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-        <div class="card-header">Cabeçalho</div>
-        <div class="card-body">
-            <h5 class="card-title">Título de Card Success</h5>
-            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
-                do card.</p>
-        </div>
-    </div>
-    <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
-        <div class="card-header">Cabeçalho</div>
-        <div class="card-body">
-            <h5 class="card-title">Título de Card Danger</h5>
-            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
-                do card.</p>
-        </div>
-    </div>
-    <div class="card text-white bg-warning mb-3" style="max-width: 18rem;">
-        <div class="card-header">Cabeçalho</div>
-        <div class="card-body">
-            <h5 class="card-title">Título de Card Warning</h5>
-            <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo
-                do card.</p>
-        </div>
-    </div>
-    </div>
+    </section>
     <!--Fim Aba: Conhecer-->
 
     <!--Inícia Aba: Sobre-nós-->
@@ -163,6 +145,139 @@
         </div>
     </section>
     <!--Fim Aba: Avaliações-->
+    <section class="planos">
+        <div class="tabela-preco">
+
+            <div class="card-preco">
+
+                <h3 class="card-preco-header">Gratuito</h3>
+
+                <div class="preco"><sup>R$</sup>0<span>Mês</span></div>
+
+                <ul class="preco-ul">
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li><strong>5</strong> projetos ativos;</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li><strong>5</strong> colaboradores por projeto;</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li><strong>5MB</strong> de carregamento de arquivos;</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li><strong>1</strong> semana de histórico de atividades;</li>
+
+                    <li></li> <br> <br> <br><br>
+                </ul>
+
+                <a href="cadastro.html" class="btn">Cadastre-se</a>
+
+            </div>
+
+
+
+
+            <div class="card-preco">
+
+                <h3 class="card-preco-header">Mensal</h3>
+
+                <div class="preco"><sup>R$</sup>15<span>Mês</span></div>
+
+                <ul class="preco-ul">
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li>TUDO DO GRATUITO E MAIS:</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li>Quadros e campos personalizados</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li>Armazenamento ilimitado;</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li><strong>1.000</strong> exeuções de comandos;</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li>Convidados de quadro único;</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li>Sem publicidade</li>
+
+                    <br>
+                </ul>
+                <a href="#" class="btn">Quero este plano</a>
+            </div>
+            <div class="card-preco">
+                <h3 class="card-preco-header">Anual</h3>
+                <div class="preco"><sup>R$</sup>150<span>Anual</span></div>
+                <ul class="preco-ul">
+                    <img class="check-in" src="images/check-list.png">
+                    <li>TUDO DO MENSAL E MAIS:</li><br>
+                    <img class="check-in" src="images/check-list.png">
+                    <li>Visualizações: Cronograma e painel;</li><br>
+                    <img class="check-in" src="images/check-list.png">
+                    <li>Visualização da Área de Trabalho;</li><br>
+                    <img class="check-in" src="images/check-list.png">
+                    <li>Execuções ilimitadas de comandos;</li><br>
+                    <img class="check-in" src="images/check-list.png">
+                    <li>Funcionalidade de administração;</li><br>
+                    <img class="check-in" src="images/check-list.png">
+                    <li>Suporte prioritário;</li>
+                </ul>
+                <a href="#" class="btn">Quero este plano</a>
+            </div>
+
+
+
+            <div class="card-preco">
+
+                <h3 class="card-preco-header">Empresarial</h3>
+
+                <div class="preco"><sup>R$</sup>500<span>Anual</span></div>
+
+                <ul class="preco-ul">
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li>Áreas de Trabalho ilimitadas;</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li>Permissões para toda empresa;</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li>Quadro vísiveis da empresa;</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li>Gerenciamento de quadro público;</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li>Convidados de mais de um quadro;</li><br>
+
+                    <img class="check-in" src="images/check-list.png">
+
+                    <li>Administração de power-ups;</li>
+                </ul>
+
+                <a href="#" class="btn">Quero este plano</a>
+    </section>
+
+    </div>
+    </div>
 
     <!--Início Aba: cadastro-secundário-->
     <section class="cadastro">
@@ -239,7 +354,7 @@
             <div class="contato">
                 <h3>Contato</h3>
 
-                <div class="rodape-contatos">
+                <div class="rodape-2">
                     <a href="https://www.whatsapp.com/?lang=pt_br" target="_blank">
                         <img src="images/whatsapp.png" alt="whatsapp">
                     </a>
