--- a/gabriel.html
+++ b/gabriel.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/gabriel.css">
 </head>
+
 <body>
     <section id="planos">
         <div class="planos-grids">
@@ -27,14 +29,14 @@
                 <h1>Mensal</h1>
                 <img src="" alt="">
                 <p class="descricao">
-                    <h3>TODOS OS RECURSOS NO GRÁTIS E MAIS:</h3>
-                    Quadros ilimitados; <br>
-                    Checklists avançadas; <br>
-                    Campos personalizados; <br>
-                    Armazenamento ilimitado (250 MB/arquivo); <br>
-                    1000 execuções de comandos de Área de trabalho por mês; <br>
-                    Convidados de quadro único; <br>
-                    Pesquisas salvas;
+                <h3>TODOS OS RECURSOS NO GRÁTIS E MAIS:</h3>
+                Quadros ilimitados; <br>
+                Checklists avançadas; <br>
+                Campos personalizados; <br>
+                Armazenamento ilimitado (250 MB/arquivo); <br>
+                1000 execuções de comandos de Área de trabalho por mês; <br>
+                Convidados de quadro único; <br>
+                Pesquisas salvas;
                 </p>
                 <h1>R$ 15</h1>
                 <input type="button">
@@ -44,16 +46,16 @@
                 <h1>Anual</h1>
                 <img src="" alt="">
                 <p>
-                    <h3>TUDO NO PLANO MENSAL, ALÉM DE:</h3>
-                    Visualizações: Calendário, cronograma, tabela, painel e mapa; <br>
-                    Visualização da área de trabalho: tabela e calendário; <br>
-                    Execuções ilimitadas de comandos da área de trabalho; <br>
-                    Funcionalidades de administração e segurança; <br>
-                    Templates de nível de Área de trabalho; <br>
-                    Coleções; <br>
-                    Observadores; <br>
-                    Suporte prioritário; <br>
-                    Exportação de dados simples;
+                <h3>TUDO NO PLANO MENSAL, ALÉM DE:</h3>
+                Visualizações: Calendário, cronograma, tabela, painel e mapa; <br>
+                Visualização da área de trabalho: tabela e calendário; <br>
+                Execuções ilimitadas de comandos da área de trabalho; <br>
+                Funcionalidades de administração e segurança; <br>
+                Templates de nível de Área de trabalho; <br>
+                Coleções; <br>
+                Observadores; <br>
+                Suporte prioritário; <br>
+                Exportação de dados simples;
                 </p>
                 <h1>R$ 150</h1>
                 <input type="button">
@@ -63,20 +65,21 @@
                 <h1>Empresarial</h1>
                 <img src="" alt="">
                 <p>
-                    <h3>TODOS OS RECURSOS NO Anual E MAIS:</h3>
-                    Áreas de trabalho ilimitadas; <br>
-                    Permissões para toda a empresa; <br>
-                    Quadros visíveis da empresa; <br>
-                    Gerenciamento de quadro público; <br>
-                    Convidados de mais de um quadro; <br>
-                    Permissões de anexos; <br>
-                    Administração de Power-Ups; <br>
-                    Login único e provisionamento de usuários gratuitos com o Atlassian Access;
+                <h3>TODOS OS RECURSOS NO Anual E MAIS:</h3>
+                Áreas de trabalho ilimitadas; <br>
+                Permissões para toda a empresa; <br>
+                Quadros visíveis da empresa; <br>
+                Gerenciamento de quadro público; <br>
+                Convidados de mais de um quadro; <br>
+                Permissões de anexos; <br>
+                Administração de Power-Ups; <br>
+                Login único e provisionamento de usuários gratuitos;
                 </p>
-                <h1>R$ 70</h1>
+                <h1>R$ 200</h1>
                 <input type="button">
             </div>
         </div>
     </section>
 </body>
+
 </html>
